--- a/app/globals.css
+++ b/app/globals.css
@@ -7,8 +7,16 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --blue: #87BFEF;
+  --dark: #181926;
 }
 
 body {
   color: var(--blue);
+}
+
+.navItem{
+  font-size: .875em;
+  letter-spacing: 1px;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 }
