--- a/app/globals.css
+++ b/app/globals.css
@@ -8,19 +8,160 @@
   --background-end-rgb: 255, 255, 255;
   --blue: #87BFEF;
   --dark: #181926;
+  --xy-edge-stroke-width-default: 0;
+}
+
+@font-face {
+	font-family: 'fake';
+	src: url('/fonts/fake.woff2');
+	font-weight: 500;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: 'mono';
+	src: url('/fonts/mono.woff2');
+	font-weight: 500;
+	font-style: normal;
 }
 
 body {
+  font-size:16pt;
+  font-family: "mono",Arial, Helvetica, sans-serif;
   color: var(--blue);
 }
 
-.navItem{
-  font-size: .875em;
-  letter-spacing: 1px;
-  font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
+.fake {
+  font-size:16pt;
+  font-family: "fake",Arial, Helvetica, sans-serif;
+
 }
+
+.fakeSub{
+  font-size:10pt;
+}
+
+.navBut{
+  font-size:5pt;
+  font-family: "fake",Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  width:120px;
+  text-align: center;
+  position: relative;
+}
+
 
 .infoCard{
   background-color: var(--dark);
 }
+
+/* nodes */
+.react-flow__node {
+  border: 0;
+  background: transparent;
+  padding: 0;
+  height: auto;
+  width:120px;
+}
+
+.react-flow__edge path{
+  stroke: var(--blue);
+}
+
+  .react-flow__handle{
+   opacity:0;
+  }
+
+  .articleStage{
+    background-color: rgb(24 25 38 / 5%);
+    backdrop-filter: blur(40px);
+    /* clip-path: rect(50% 50% 50% 50%);
+    animation: artOn 1s cubic-bezier(0.57, 0.06, 0.05, 0.95) forwards; */
+  
+  }
+
+  .navBut div{
+    padding: 5px;
+    background-color: rgb(24 25 38 / 10%);
+    backdrop-filter: blur(5px);
+    opacity: 0;
+    position: relative;
+    transform: translateX(20px);
+    animation: fadeOn 1s cubic-bezier(0.57, 0.06, 0.05, 0.95) forwards;
+  }
+
+  .navBut::before{
+    content: "+";
+    color:var(--blue);
+    position: absolute;
+    top:0;
+    left:0;
+    transform: translate(-50%,-50%);
+  }
+
+  .navBut div:first-child:before{
+    content: "+";
+    color:var(--blue);
+    position: absolute;
+    bottom:0;
+    left:0;
+    transform: translate(-50%,50%);
+  }
+
+  .navBut::after{
+    content: "+";
+    color:var(--blue);
+    position: absolute;
+    top:0;
+    right:0;
+    transform: translate(50%,-50%);
+  }
+
+  .navBut div:first-child::after{
+    content: "+";
+    color:var(--blue);
+    position: absolute;
+    bottom:0;
+    right:0;
+    transform: translate(50%,50%);
+  }
+
+  .navBut:hover{
+    animation: blink 250ms cubic-bezier(0.57, 0.06, 0.05, 0.95) infinite;
+  }
+
+  .react-flow__minimap{
+    background-color: rgb(255 255 255 / 5%);
+    backdrop-filter: blur(5px);
+    width:150px;
+    overflow: hidden;
+    border-radius:1000px;}
+
+    .react-flow__attribution{display:none}
+
+  @keyframes fadeOn{
+  0%{    opacity:0;max-height:0;transform: translateX(20px);
+  }
+  100% {
+   opacity:1;max-height:1000px;transform: translateX(0);
+    }
+}
+
+@keyframes blink{
+  0%{    opacity:0;transform: translateX(0);
+  }
+  97% {
+   opacity:1;transform: translateX(0);
+    }
+}
+
+@keyframes artOn{
+  0%{    clip-path: rect(50% 50% 50% 50%);
+  }
+  100% {
+    clip-path: rect(0% 0% 0% 0%);
+    }
+}
+
+
+
