--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
-  --blue: #87BFEF;
+  --blue: #87bfef;
   --dark: #181926;
   --xy-edge-stroke-width-default: 0;
 }
@@ -108,6 +108,8 @@ body {
     transform: translateX(20px);
     animation: fadeOn 1s cubic-bezier(0.57, 0.06, 0.05, 0.95) forwards;
   }
+
+ 
 
   .titleHolder{
     padding: 10px;
