--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@
 body {
   font-size:16pt;
   font-family: "mono",Arial, Helvetica, sans-serif;
-  color: var(--blue);
+  color: var(--dark);
 }
 
 h1{
@@ -98,7 +98,7 @@ h1{
 }
 
 .react-flow__edge path{
-  stroke: var(--blue);
+  stroke: var(--dark);
 }
 
   .react-flow__handle{
@@ -176,7 +176,7 @@ h1{
 
   .react-flow__minimap{
     background-color: rgb(255 255 255 / 5%);
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
     width:150px;
     overflow: hidden;
     border-radius:1000px;}
