--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
   --background-start-rgb: 214, 219, 220;
   --background-end-rgb: 255, 255, 255;
   --blue: #2c86d0;
-  --dark: #181926;
+  --dark: #000000;
   --white:#fcf4dd;
   --xy-edge-stroke-width-default: 0;
   --2xs:8px;
@@ -34,7 +34,7 @@
 }
 
 body {
-  font-size:16pt;
+  font-size:18pt;
   font-family: "mono",Arial, Helvetica, sans-serif;
   color: var(--dark);
 }
@@ -43,6 +43,26 @@ h1{
   font-size: 5rem;
   font-family: 'fake', arial;
   line-height: 1.125em;
+}
+
+.contentBlock p, .contentBlock h1, .contentBlock h2{
+margin-bottom: var(--sm);
+}
+
+.contentBlock h1, .contentBlock h2{
+  margin-top: var(--sm);
+  }
+
+
+.contentBlock strong{
+  font-family: "fake",Arial, Helvetica, sans-serif;
+}
+
+.contentBlock em{
+  font-family: "fake",Arial, Helvetica, sans-serif;
+  font-style: normal;
+  text-decoration: underline;
+  font-weight: 500;
 }
 
 .fake {
@@ -106,7 +126,7 @@ h1{
   }
 
   .articleStage{
-    background-color: rgb(24 25 38 / 5%);
+    /* background-color: rgb(24 25 38 / 5%); */
     backdrop-filter: blur(40px);
     /* clip-path: rect(50% 50% 50% 50%);
     animation: artOn 1s cubic-bezier(0.57, 0.06, 0.05, 0.95) forwards; */
@@ -182,6 +202,9 @@ h1{
     border-radius:1000px;}
 
     .react-flow__attribution{display:none}
+
+
+
 
   @keyframes fadeOn{
   0%{    opacity:0;max-height:0;transform: translateX(20px);
