--- a/app/globals.css
+++ b/app/globals.css
@@ -230,5 +230,13 @@ margin-bottom: var(--sm);
     }
 }
 
+@media (max-width:850px){
+  h1{
+    font-size: 2.125rem;
+  }
+  p{
+    font-size:16pt;
+  }
+}
 
 
