--- a/app/globals.css
+++ b/app/globals.css
@@ -46,6 +46,14 @@ h1{
   line-height: 1.125em;
 }
 
+h1.title{
+  font-size: 20rem;
+  text-align: justify;
+  text-justify: inter-word;
+  text-align-last: justify;
+  
+}
+
 .contentBlock p, .contentBlock h1, .contentBlock h2{
 margin-bottom: var(--sm);
 }
@@ -134,7 +142,7 @@ button{
 
   .articleStage{
     /* background-color: rgb(24 25 38 / 5%); */
-    backdrop-filter: blur(20px);
+    backdrop-filter: blur(30px);
     /* clip-path: rect(50% 50% 50% 50%);
     animation: artOn 1s cubic-bezier(0.57, 0.06, 0.05, 0.95) forwards; */
   
@@ -142,8 +150,8 @@ button{
 
   .navBut div{
     padding: 5px;
-    background-color: rgba(252, 244, 221, 0.1);
-    backdrop-filter: blur(5px);
+    background-color: rgba(20, 20, 20, 0.45);
+    backdrop-filter: blur(10px);
     opacity: 0;
     position: relative;
     transform: translateX(20px);
@@ -195,6 +203,10 @@ button{
     bottom:0;
     right:0;
     transform: translate(50%,50%);
+  }
+
+  .gridBox{
+    font-size:10pt;
   }
 
   .navBut:hover{
