--- a/app/globals.css
+++ b/app/globals.css
@@ -300,8 +300,8 @@ input::placeholder{
     font-size:10pt;
   }
 
-  .navBut:hover, .subBut:hover, .singleArticle:hover{
-    animation: blink 250ms cubic-bezier(0.57, 0.06, 0.05, 0.95) infinite;
+  .navBut:hover, .subBut:hover, .singleArticle:hover .linkBut{
+    animation: blink 200ms cubic-bezier(0.57, 0.06, 0.05, 0.95) infinite;
   }
 
   .react-flow__minimap{
@@ -345,7 +345,10 @@ input::placeholder{
 @keyframes blink{
   0%{    opacity:0;transform: translateX(0);
   }
-  97% {
+  70% {
+   opacity:0;transform: translateX(0);
+    }
+     75% {
    opacity:1;transform: translateX(0);
     }
 }
