--- a/app/globals.css
+++ b/app/globals.css
@@ -178,9 +178,7 @@ h2{
 margin-bottom: var(--sm);
 }
 
-.contentBlock h1, .contentBlock h2{
-  margin-top: var(--sm);
-  }
+
 
   .contentBlock h1{
   font-size:2rem;
@@ -291,11 +289,8 @@ input::placeholder{
   }
 
   .articleStage, .bgBlur{
-    /* background-color: rgb(24 25 38 / 5%); */
     backdrop-filter: blur(30px);
-    /* clip-path: rect(50% 50% 50% 50%);
-    animation: artOn 1s cubic-bezier(0.57, 0.06, 0.05, 0.95) forwards; */
-  
+
   }
 
   .navBut div{
@@ -355,7 +350,7 @@ input::placeholder{
     transform: translate(50%,50%);
   }
 
-  .gridBox{
+  .gridBox.donate{
     font-size:10pt;
   }
 
