--- a/app/globals.css
+++ b/app/globals.css
@@ -178,6 +178,12 @@ h2{
 margin-bottom: var(--sm);
 }
 
+h1.ol-number, .navBut p{
+  margin-bottom:0;
+  text-box: trim-both cap alphabetic;
+
+}
+
 
 
   .contentBlock h1{
@@ -207,6 +213,10 @@ margin-bottom: var(--sm);
   font-family: 'fk';
 }
 
+h1:last-child, h2:last-child, p:last-child{
+  margin-bottom: 0;
+}
+
 .mono{font-family:"mono",'Courier New', Courier, monospace}
 
 .navBut{
@@ -216,6 +226,8 @@ margin-bottom: var(--sm);
   width:120px;
   text-align: center;
   position: relative;
+   text-box: trim-both cap alphabetic;
+  
 }
 
 button,.caption{
@@ -279,7 +291,7 @@ input::placeholder{
   width:15vw;
 }
 
-.react-flow__edge path{
+.react-flow__edge paFYGBth{
   stroke: var(--white);
   pointer-events: none;
 }
@@ -294,7 +306,7 @@ input::placeholder{
   }
 
   .navBut div{
-    padding: 5px;
+    padding: 8px 5px;
     background-color: rgba(20, 20, 20, 0.45);
     backdrop-filter: blur(10px);
     opacity: 0;
@@ -354,7 +366,7 @@ input::placeholder{
     font-size:10pt;
   }
 
-  .navBut:hover, .subBut:hover, .singleArticle:hover .linkBut{
+  .navBut:hover, .subBut:hover, .singleArticle:hover .linkBut, .faqsItem:hover .faqBut{
     animation: blink 200ms cubic-bezier(0.57, 0.06, 0.05, 0.95) infinite;
   }
 
@@ -379,6 +391,23 @@ input::placeholder{
       transform-origin: left;
     }
 
+    /* faqs */
+    .faqQuest{
+      max-height: 0;
+      opacity: 0;
+      transition: all .25s ease-in-out;
+    }
+
+    .itemActive .faqQuest{
+      max-height: 10000px;
+      opacity: 1;
+      padding-top:var(--sm);
+    }
+
+    .itemActive .faqBut{
+      background-color: #ffffff;
+      color:#000000;
+    }
 
   @keyframes fadeOn{
   0%{    opacity:0;max-height:0;transform: translateX(20px);
