--- a/app/globals.css
+++ b/app/globals.css
@@ -295,7 +295,7 @@ input::placeholder{
   width:15vw;
 }
 
-.react-flow__edge paFYGBth{
+.react-flow__edge{
   stroke: var(--white);
   pointer-events: none;
 }
@@ -375,10 +375,11 @@ input::placeholder{
   }
 
   .react-flow__minimap{
-    pointer-events: none !important;
-    background-color: rgb(255 255 255 / 5%);
+    /* pointer-events: none !important; */
+    background-color: rgba(255,255,255, .15%);
     backdrop-filter: blur(10px);
-    width:150px;
+    width:100px;
+    height:100px;
     overflow: hidden;
     border-radius:1000px;
     border:1px solid var(--light);
