--- a/app/globals.css
+++ b/app/globals.css
@@ -178,7 +178,7 @@ h2{
 margin-bottom: var(--sm);
 }
 
-h1.ol-number, .navBut p{
+h1.ol-number, .navBut p, .closeBut h1{
   margin-bottom:0;
   text-box: trim-both cap alphabetic;
 
@@ -370,7 +370,7 @@ input::placeholder{
     font-size:10pt;
   }
 
-  .navBut:hover, .subBut:hover, .singleArticle:hover .linkBut, .faqsItem:hover .faqBut{
+  .navBut:hover,.closeBut:hover, .subBut:hover, .singleArticle:hover .linkBut, .faqsItem:hover .faqBut{
     animation: blink 200ms cubic-bezier(0.57, 0.06, 0.05, 0.95) infinite;
   }
 
