--- a/app/globals.css
+++ b/app/globals.css
@@ -168,6 +168,10 @@ body {
   color: var(--white);
 }
 
+.contentBlock, .articleStage{
+  overflow-x: hidden;
+}
+
 li{
   font-family: 'mono', 'Courier New', Courier, monospace;
   font-size: 15pt;}
