--- a/app/globals.css
+++ b/app/globals.css
@@ -407,7 +407,7 @@ input::placeholder{
     font-size:10pt;
   }
 
-  .navBut:hover,.closeBut:hover, .subBut:hover, .singleArticle:hover .linkBut, .faqsItem:hover .faqBut{
+  .donate:hover .donateBut,.navBut:hover,.closeBut:hover, .subBut:hover, .singleArticle:hover .linkBut, .faqsItem:hover .faqBut{
     animation: blink 200ms cubic-bezier(0.57, 0.06, 0.05, 0.95) infinite;
   }
 
