--- a/app/globals.css
+++ b/app/globals.css
@@ -369,18 +369,38 @@ input::placeholder{
     animation: fadeOn 1s cubic-bezier(0.57, 0.06, 0.05, 0.95) forwards;
   }
 
-  .navBut::before, .gridBox::before, .subBut::before{
+  .navBut::before{
     content: "+";
     position: absolute;
+z-index: 100;
+    top:0;
+    left:0;
+    transform: translate(-50%,-50%);
+  }
+
+  .navBut div:first-child:before {
+    content: "+";
+    position: absolute;
+    z-index: 100;
+    bottom:0;
+    left:0;
+    transform: translate(-50%,50%);
+  }
+
+   .gridBox::before, .subBut::before{
+    content: "+";
+    position: absolute;
+    z-index: 100;
     width:0;
     top:0;
     left:0;
     transform: translate(-50%,-50%);
   }
 
-  .navBut div:first-child:before,.gridBox > div:first-child:before, .subBut > div:first-child:before {
+ .gridBox > div:first-child:before, .subBut > div:first-child:before {
     content: "+";
     position: absolute;
+    z-index: 100;
     width:0;
     bottom:0;
     left:0;
@@ -389,24 +409,44 @@ input::placeholder{
 
  
 
-  .navBut::after,  .gridBox::after,.subBut::after {
+  .navBut::after{
+    content: "+";
+
+    position: absolute;
+    text-align: right;
+    top:0;
+    right:0;
+    transform: translate(50%,-50%);
+  }
+
+  .navBut div:first-child::after{
+    content: "+";
+    position: absolute;
+    text-align: right;
+ 
+    bottom:0;
+    right:0;
+    transform: translate(50%,50%);
+  }
+
+    .gridBox::after,.subBut::after {
     content: "+";
     width:0;
     position: absolute;
     text-align: right;
     top:0;
     right:var(--xs);
-    transform: translate(-100%,-50%);
+    transform: translate(-50%,-50%);
   }
 
-  .navBut div:first-child::after, .gridBox > div:first-child::after, .subBut > div:first-child::after{
+ .gridBox > div:first-child::after, .subBut > div:first-child::after{
     content: "+";
     position: absolute;
     text-align: right;
     width:0;
     bottom:0;
     right:var(--xs);
-    transform: translate(-100%,50%);
+    transform: translate(-50%,50%);
   }
 
   .gridBox.donate{
