--- a/app/globals.css
+++ b/app/globals.css
@@ -342,6 +342,7 @@ input::placeholder{
   }
 
   .articleStage, .bgBlur{
+    -webkit-backdrop-filter: blur(30px);
     backdrop-filter: blur(30px);
 
   }
@@ -349,6 +350,7 @@ input::placeholder{
   .navBut div{
     padding: 8px 5px;
     background-color: rgba(20, 20, 20, 0.45);
+    -webkit-backdrop-filter: blur(10px)!important;
     backdrop-filter: blur(10px);
     opacity: 0;
     position: relative;
@@ -361,6 +363,7 @@ input::placeholder{
   .titleHolder{
     padding: 10px;
     background-color: rgb(135 191	239 / 20%);
+    -webkit-backdrop-filter: blur(20px)!important;
     backdrop-filter: blur(20px);
     opacity: 0;
     border-radius: 5px;
@@ -460,6 +463,7 @@ z-index: 100;
   .react-flow__minimap{
     /* pointer-events: none !important; */
     background-color: rgba(255,255,255, .15%);
+    -webkit-backdrop-filter: blur(10px)!important;
     backdrop-filter: blur(10px);
     width:100px;
     height:100px;
