--- a/app/globals.css
+++ b/app/globals.css
@@ -254,6 +254,11 @@ h1.ol-number, .navBut p, .closeBut h1{
   font-family: 'fk';
 }
 
+.fk p{
+  font-size:12pt;
+    text-box: trim-both cap alphabetic;
+}
+
 h1:last-child, h2:last-child, p:last-child{
   margin-bottom: 0;
 }
@@ -363,7 +368,7 @@ input::placeholder{
   .titleHolder{
     padding: 10px;
     background-color: rgb(135 191	239 / 20%);
-    -webkit-backdrop-filter: blur(20px)!important;
+    -webkit-backdrop-filter: blur(px)!important;
     backdrop-filter: blur(20px);
     opacity: 0;
     border-radius: 5px;
@@ -551,6 +556,10 @@ z-index: 100;
   padding-bottom:150px;
 }
 
+.fk p{
+  font-size:10pt;
+}
+
  .richText p, .contentBlock p {
 font-size: 14pt;
 }
@@ -563,6 +572,15 @@ h2{
 .contentBlock li, .faqQuest p, .contentBlock .mono p{
   font-size:12pt;
 }
+}
+
+
+  @media (hover: hover) {
+
+      .donate:hover .donateBut,.navBut:hover,.closeBut:hover, .subBut:hover, .singleArticle:hover .linkBut, .faqsItem:hover .faqBut{
+    animation: blink 200ms cubic-bezier(0.57, 0.06, 0.05, 0.95) infinite;
+  }
+
 }
 
 
